--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <p>HELLO WORLD</p>
-    <img src="anh_co_gai.jpg" alt="anh-co-gai" />
+    <img src="anh_co_gai.jpg" alt="anh-co-gai" height = "250"/>
+    
   </body>
 </html>
